--- a/routes/webProjects/_webProjects.css
+++ b/routes/webProjects/_webProjects.css
@@ -66,7 +66,7 @@
   margin: 20px auto;
 }
 
-.projects-display-card {
+.projects-display-card-body {
   width: 100%;
   padding: 20px;
   gap: 20px;
@@ -76,7 +76,7 @@
   flex-direction: column;
 }
 
-.projects-display-card h2 {
+.projects-display-card-body h2 {
   font-size: 26px;
   line-height: 30px;
   text-align: center;
@@ -86,34 +86,34 @@
   text-decoration: underline;
 }
 
-.projects-display-card h3 {
+.projects-display-card-body h3 {
   font-size: 20px;
   text-align: left;
   font-weight: 700;
   width: 100%;
 }
 
-.projects-display-card p {
+.projects-display-card-body p {
   text-align: justify;
   font-size: 16px;
   width: 100%;
 }
 
-.projects-display-card ul {
+.projects-display-card-body ul {
   text-align: left;
   width: 100%;
   padding-left: 30px;
   box-sizing: border-box;
 }
 
-.projects-display-card li {
+.projects-display-card-body li {
   width: 100%;
   height: min-content;
   text-align: left;
   position: relative;
 }
 
-.projects-display-card li > img {
+.projects-display-card-body li > img {
   height: 16px;
   object-fit: contain;
   position: absolute;
@@ -131,14 +131,14 @@
   align-items: center;
 }
 
-.projects-display-card-video {
+.projects-display-card-body-video {
   width: 100%;
   height: 100%;
   object-fit: contain;
   border-radius: 12px;
 }
 
-.projects-display-cards-CTA {
+.projects-display-card-CTA {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -234,32 +234,32 @@
     margin: 30px auto;
   }
 
-  .projects-display-card {
+  .projects-display-card-body {
     padding: 40px;
     gap: 25px;
     line-height: 25px;
   }
 
-  .projects-display-card h2 {
+  .projects-display-card-body h2 {
     font-size: 32px;
     line-height: 34px;
     padding: 20px 0;
   }
 
-  .projects-display-card h3 {
+  .projects-display-card-body h3 {
     font-size: 28px;
   }
 
-  .projects-display-card p {
+  .projects-display-card-body p {
     font-size: 16px;
   }
 
-  .projects-display-card ul {
+  .projects-display-card-body ul {
     padding-left: 50px;
     font-size: 16px;
   }
 
-  .projects-display-card li {
+  .projects-display-card-body li {
     width: 100%;
     height: min-content;
     text-align: left;
@@ -267,7 +267,7 @@
     box-sizing: border-box;
   }
 
-  .projects-display-card li > img {
+  .projects-display-card-body li > img {
     height: 16px;
     object-fit: contain;
     position: absolute;
@@ -275,7 +275,7 @@
     transform: translateY(-50%);
   }
 
-  .projects-display-cards-CTA {
+  .projects-display-card-CTA {
     margin: 15px auto;
     gap: 15px;
     flex-direction: row;
@@ -286,7 +286,7 @@
     border: 5px dotted var(--mainColor);
   }
 
-  .projects-display-card-video {
+  .projects-display-card-body-video {
     border-radius: 16px;
   }
 
@@ -383,7 +383,7 @@
     margin: 20px auto;
   }
 
-  .projects-display-card {
+  .projects-display-card-body {
     width: 100%;
     padding: 40px;
     gap: 30px;
@@ -394,7 +394,7 @@
     flex-direction: column;
   }
 
-  .projects-display-card h2 {
+  .projects-display-card-body h2 {
     font-size: 46px;
     line-height: 38px;
     text-align: center;
@@ -404,27 +404,27 @@
     text-decoration: underline;
   }
 
-  .projects-display-card h3 {
+  .projects-display-card-body h3 {
     font-size: 32px;
     text-align: left;
     font-weight: 700;
     width: 100%;
   }
 
-  .projects-display-card p {
+  .projects-display-card-body p {
     text-align: justify;
     font-size: 20px;
     width: 100%;
   }
 
-  .projects-display-card ul {
+  .projects-display-card-body ul {
     text-align: left;
     width: 100%;
     padding-left: 50px;
     box-sizing: border-box;
   }
 
-  .projects-display-card li {
+  .projects-display-card-body li {
     width: 100%;
     height: min-content;
     text-align: left;
@@ -432,7 +432,7 @@
     box-sizing: border-box;
   }
 
-  .projects-display-card li > img {
+  .projects-display-card-body li > img {
     height: 16px;
     object-fit: contain;
     position: absolute;
@@ -440,7 +440,7 @@
     transform: translateY(-50%);
   }
 
-  .projects-display-cards-CTA {
+  .projects-display-card-CTA {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -458,7 +458,7 @@
     align-items: center;
   }
 
-  .projects-display-card-video {
+  .projects-display-card-body-video {
     border-radius: 18px;
   }
 
