updated code in whole project for better lecture

--- a/routes/Contact/_contact.css
+++ b/routes/Contact/_contact.css
@@ -216,7 +216,7 @@
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
   }
 
   .contact-content img {
@@ -232,7 +232,7 @@
   }
 
   .contact-copy {
-    width: 50%;
+    width: 55%;
     padding-top: 0%;
     gap: 30px;
     display: flex;
