--- a/routes/AboutMe/_aboutMe.css
+++ b/routes/AboutMe/_aboutMe.css
@@ -202,7 +202,7 @@
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
   }
 
   .aboutMe-content img {
@@ -218,7 +218,7 @@
   }
 
   .aboutMe-copy {
-    width: 50%;
+    width: 55%;
     padding-top: 0%;
     gap: 30px;
     display: flex;
