--- a/routes/LandingPage/_landingPage.css
+++ b/routes/LandingPage/_landingPage.css
@@ -108,7 +108,8 @@
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
+    border: 1px dotted white;
   }
 
   .landingPage-content img {
@@ -117,6 +118,7 @@
     object-fit: contain;
     animation: scale-opacity-in 0.7s cubic-bezier(0.5, 0.27, 0.45, 0.87);
     transition: all 0.4s cubic-bezier(0.5, 0.27, 0.45, 0.87);
+    border: 1px dotted white;
   }
 
   .landingPage-content img:hover {
@@ -124,12 +126,13 @@
   }
 
   .landingPage-copy {
-    width: 50%;
+    width: 55%;
     padding-top: 0%;
     gap: 30px;
     display: flex;
     justify-content: center;
     flex-direction: column;
+    border: 1px dotted white;
   }
 
   .landingPage-copy h2 {
