--- a/routes/AboutMe/_aboutMe.css
+++ b/routes/AboutMe/_aboutMe.css
@@ -102,16 +102,26 @@
   width: 100%;
 }
 
-.about-me-read-more-content img {
-  object-fit: contain;
-  width: 100%;
-}
-
 .about-me-read-more-content i {
   font-size: 10px;
   text-align: center;
   margin-top: 20px;
   width: 100%;
+}
+
+.about-me-asset-loader {
+  width: 100%;
+  height: 150px;
+  border: 3px dotted var(--mainColor);
+  color: var(--mainColor);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.about-me-body-asset {
+  width: 100%;
+  border-radius: 12px;
 }
 
 /* ------------------------------------------- Tablet media query -----------------------------------------------------------------------*/
@@ -180,6 +190,15 @@
     font-size: 12px;
     margin-top: 40px;
     text-align: right;
+  }
+
+  .about-me-asset-loader {
+    height: 300px;
+    border: 5px dotted var(--mainColor);
+  }
+
+  .about-me-body-asset {
+    border-radius: 16px;
   }
 }
 
@@ -304,5 +323,19 @@
     text-align: right;
     margin-top: 50px;
     width: 100%;
+  }
+
+  .about-me-asset-loader {
+    width: 100%;
+    height: 450px;
+    border: 3px dotted var(--mainColor);
+    color: var(--mainColor);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .about-me-body-asset {
+    border-radius: 18px;
   }
 }
