--- a/routes/webProjects/_webProjects.css
+++ b/routes/webProjects/_webProjects.css
@@ -121,6 +121,12 @@
   transform: translateY(-50%);
 }
 
+.projects-display-card-body i {
+  text-align: right;
+  opacity: 0.6;
+  font-size: 10px;
+}
+
 .projects-display-card-CTA {
   display: flex;
   flex-direction: column;
@@ -273,6 +279,10 @@
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
+  }
+
+  .projects-display-card-body i {
+    font-size: 12px;
   }
 
   .projects-display-card-CTA {
@@ -438,6 +448,10 @@
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
+  }
+
+  .projects-display-card-body i {
+    font-size: 14px;
   }
 
   .projects-display-card-CTA {
