--- a/components/Email-InputForm/_inputForm.css
+++ b/components/Email-InputForm/_inputForm.css
@@ -12,7 +12,8 @@
   gap: 20px;
 }
 
-.form-content h3 {
+.form-content h4 {
+  font-size: 20px;
   width: 100%;
   display: flex;
   justify-content: flex-start;
@@ -66,6 +67,8 @@
   text-decoration: underline;
   color: var(--mainColor);
 }
+
+/* -----------------------  pop-up styles   */
 
 .email-pop-up-root {
   z-index: 1000;
@@ -177,16 +180,20 @@
     gap: 20px;
     padding-bottom: 30px;
   }
+
   .input-form-my-email p {
     font-size: 20px;
   }
+
   .input-form-my-email div {
     width: 45px;
     height: 45px;
   }
+
   .input-form-my-email div i {
     font-size: 20px;
   }
+
   .email-input-box {
     height: 40px;
     font-size: 20px;
@@ -205,6 +212,7 @@
     padding: 30px 30px;
     border-radius: 8px;
   }
+
   .form-message-input:focus {
     border: 2px solid var(--mainColor);
     border-radius: 8px;
@@ -213,6 +221,7 @@
   .submit-button-CTA {
     margin: 20px 0;
   }
+
   .email-pop-up-body {
     position: fixed;
     height: 200px;
@@ -221,10 +230,12 @@
     border: 2px solid var(--mainColor);
     gap: 15px;
   }
+
   .email-pop-up-body h2 {
     font-size: 34px;
     margin: 0;
   }
+
   .email-pop-up-body span {
     margin: 0;
   }
