--- a/components/Email-InputForm/_inputForm.css
+++ b/components/Email-InputForm/_inputForm.css
@@ -9,7 +9,15 @@
   height: fit-content;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 10px;
+}
+
+.form-content-titles {
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .form-content h4 {
@@ -24,16 +32,10 @@
   width: 100%;
   font-size: 16px;
   padding: 10px 10px;
-  border-radius: 4px;
+  border-radius: 12px;
   text-align: left;
   box-sizing: border-box;
   border: none;
-  font-family: var(--mainFont);
-}
-
-.form-content input:focus {
-  border: 1px solid var(--mainColor);
-  border-radius: 4px;
   font-family: var(--mainFont);
 }
 
@@ -44,28 +46,15 @@
   padding: 10px 10px;
   box-sizing: border-box;
   text-align: left;
-  border-radius: 4px;
+  border-radius: 12px;
   font-family: var(--mainFont);
   resize: none;
   border: none;
 }
 
-.form-content textarea:focus {
-  border: 1px solid var(--mainColor);
-  border-radius: 4px;
-  font-family: var(--mainFont);
-}
-
 .form-button-CTA {
   width: fit-content;
-  margin: 10px auto;
-}
-
-.form-content p {
-  font-size: 16px;
-  font-style: italic;
-  text-decoration: underline;
-  color: var(--mainColor);
+  margin: 20px auto;
 }
 
 /* -----------------------  pop-up styles   */
