--- a/components/Email-InputForm/_inputForm.css
+++ b/components/Email-InputForm/_inputForm.css
@@ -82,28 +82,32 @@
   top: 0;
   left: 0;
   position: fixed;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .email-pop-up-content {
-  height: 150px;
-  width: 250px;
+  position: absolute;
+  height: 250px;
+  width: 300px;
   border-radius: 12px;
   z-index: 1;
-  gap: 20px;
-  border: 1px solid var(--mainColor);
-  background-color: var(--secColor);
-  position: relative;
+  gap: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  top: 50%;
+  transform: translateY(-50%);
+  border: 1px solid var(--mainColor);
+  background-color: var(--secColor);
 }
 
-.email-pop-up-body h2 {
+.email-pop-up-content h2 {
   font-size: 24px;
+}
+
+.email-pop-up-content img {
+  width: 25%;
+  margin: 10px auto;
 }
 
 .email-pop-up-background {
@@ -197,21 +201,21 @@
 
   /* -----------------------  pop-up styles ------------  */
 
-  .email-pop-up-body {
+  .email-pop-up-root {
     height: 225px;
     width: 350px;
     border-radius: 22px;
     border: 2px solid var(--mainColor);
   }
 
-  .email-pop-up-body h2 {
+  .email-pop-up-content h2 {
     text-align: center;
     font-size: 32px;
     margin: 10px 0;
     font-weight: 700;
   }
 
-  .email-pop-up-body span {
+  .email-pop-up-content span {
     margin: 10px 0;
   }
 }
@@ -296,21 +300,21 @@
 
   /* -----------------------  pop-up styles ------------  */
 
-  .email-pop-up-body {
+  .email-pop-up-root {
     position: fixed;
-    height: 200px;
+    height: 300px;
     width: 300px;
     border-radius: 22px;
     border: 2px solid var(--mainColor);
     gap: 15px;
   }
 
-  .email-pop-up-body h2 {
+  .email-pop-up-content h2 {
     font-size: 34px;
     margin: 0;
   }
 
-  .email-pop-up-body span {
+  .email-pop-up-content span {
     margin: 0;
   }
 }
