--- a/components/DemoCard/_demoCard.css
+++ b/components/DemoCard/_demoCard.css
@@ -9,6 +9,7 @@
   border-radius: 12px;
   position: relative;
   overflow: hidden;
+  transition: all 0.2s ease-in-out;
 }
 
 .card-root-close {
@@ -23,6 +24,19 @@
   position: relative;
   overflow: hidden;
   background-color: none;
+  transition: all 0.2s ease-in-out;
+}
+
+.card-root-close:hover {
+  scale: 1.01;
+  opacity: 0.95;
+  box-shadow: 0px 0px 15px 0px var(--mainColor);
+}
+
+.card-root-open:hover {
+  scale: 1.01;
+  opacity: 0.95;
+  box-shadow: 0px 0px 20px 0px var(--mainColor);
 }
 
 .card-headline {
