--- a/components/DemoCard/_demoCard.css
+++ b/components/DemoCard/_demoCard.css
@@ -30,12 +30,14 @@
 .card-root-close:hover {
   scale: 1.01;
   opacity: 0.95;
+  cursor: pointer;
   box-shadow: 0px 0px 15px 0px var(--mainColor);
 }
 
 .card-root-open:hover {
   scale: 1.01;
   opacity: 0.95;
+  cursor: pointer;
   box-shadow: 0px 0px 20px 0px var(--mainColor);
 }
 
