--- a/src/routes/AboutMe/_aboutMe.css
+++ b/src/routes/AboutMe/_aboutMe.css
@@ -131,6 +131,11 @@
   width: 100%;
   border: none;
   border-radius: 12px;
+  transition: all 0.2s ease-in-out;
+}
+
+.about-me-body-asset:hover {
+  box-shadow: 0px 0px 5px 0px hsla(266deg, 99%, 60%, 0.3);
 }
 
 /* ------------------------------------------- Tablet media query -----------------------------------------------------------------------*/
@@ -211,6 +216,11 @@
 
   .about-me-body-asset {
     border-radius: 16px;
+    width: 80%;
+  }
+
+  .about-me-body-asset:hover {
+    box-shadow: 0px 0px 15px 0px hsla(266deg, 99%, 60%, 0.3);
   }
 }
 
@@ -285,7 +295,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 80%;
+    width: 70%;
     margin: 0 auto;
     margin-bottom: 10%;
     gap: 30px;
@@ -352,5 +362,10 @@
 
   .about-me-body-asset {
     border-radius: 18px;
+    width: 60%;
+  }
+
+  .about-me-body-asset:hover {
+    box-shadow: 0px 0px 20px 0px hsla(266deg, 99%, 60%, 0.3);
   }
 }
