--- a/src/routes/webProjects/_webProjects.css
+++ b/src/routes/webProjects/_webProjects.css
@@ -1,9 +1,9 @@
-.projects-root {
+.web-projects-root {
   width: 80%;
   margin: 0 auto;
 }
 
-.projects-content {
+.web-projects-content {
   height: 100%;
   width: 100%;
   margin-top: 20%;
@@ -12,18 +12,19 @@
   flex-direction: column;
 }
 
-.projects-content img {
-  height: 250px;
+.web-projects-main-asset {
+  width: 250px;
+  margin: 0 auto;
   object-fit: contain;
   animation: scale-opacity-in 0.7s cubic-bezier(0.5, 0.27, 0.45, 0.87);
-  transition: all 0.4s cubic-bezier(0.5, 0.27, 0.45, 0.87);
+  transition: all 0.2s cubic-bezier(0.5, 0.27, 0.45, 0.87);
 }
 
-.projects-content img:hover {
-  transform: rotate(10deg) scale(1.1);
+.web-projects-main-asset:hover {
+  transform: scale(1.05);
 }
 
-.projects-copy {
+.web-projects-copy {
   width: 100%;
   padding-top: 20%;
   gap: 20px;
@@ -31,20 +32,20 @@
   flex-direction: column;
 }
 
-.projects-copy h2 {
+.web-projects-copy h2 {
   font-size: 26px;
   text-align: left;
   font-weight: 700;
   animation: opacity-translation-Y-in 0.7s cubic-bezier(0.48, 0.23, 0.61, 0.93);
 }
-.projects-copy p {
+.web-projects-copy p {
   font-size: 16px;
   font-weight: normal;
   text-align: justify;
   animation: opacity-translation-Y-in 0.8s cubic-bezier(0.48, 0.23, 0.61, 0.93);
 }
 
-.projects-CTA {
+.web-projects-CTA {
   margin-left: auto;
   margin-top: 10%;
   animation: opacity-in 0.4s cubic-bezier(0.48, 0.23, 0.61, 0.93);
@@ -52,7 +53,7 @@
   animation-fill-mode: backwards;
 }
 
-.projects-display-projects-cards {
+.web-projects-display-web-projects-cards {
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -60,13 +61,13 @@
   margin-bottom: 20%;
 }
 
-.projects-display-projects-cards hr {
+.web-projects-display-web-projects-cards hr {
   width: 85%;
   border-radius: 100%;
   margin: 20px auto;
 }
 
-.projects-display-card-body {
+.web-projects-display-card-body {
   width: 100%;
   padding: 20px;
   gap: 20px;
@@ -76,7 +77,7 @@
   flex-direction: column;
 }
 
-.projects-display-card-body h2 {
+.web-projects-display-card-body h2 {
   font-size: 26px;
   text-align: center;
   font-weight: 700;
@@ -85,40 +86,40 @@
   text-decoration: underline;
 }
 
-.projects-display-card-body i {
+.web-projects-display-card-body i {
   text-align: right;
   opacity: 0.6;
   font-size: 10px;
 }
 
-.projects-display-card-body h4 {
+.web-projects-display-card-body h4 {
   font-size: 20px;
   text-align: left;
   font-weight: 700;
   width: 100%;
 }
 
-.projects-display-card-body p {
+.web-projects-display-card-body p {
   text-align: justify;
   font-size: 16px;
   width: 100%;
 }
 
-.projects-display-card-body ul {
+.web-projects-display-card-body ul {
   text-align: left;
   width: 100%;
   padding-left: 30px;
   box-sizing: border-box;
 }
 
-.projects-display-card-body li {
+.web-projects-display-card-body li {
   width: 100%;
   height: min-content;
   text-align: left;
   position: relative;
 }
 
-.projects-display-card-body li > img {
+.web-projects-display-card-body li > img {
   height: 16px;
   object-fit: contain;
   position: absolute;
@@ -126,7 +127,7 @@
   transform: translateY(-50%);
 }
 
-.projects-display-card-CTA {
+.web-projects-display-card-CTA {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -134,7 +135,7 @@
   gap: 10px;
 }
 
-.projects-card-asset-loader {
+.web-projects-card-asset-loader {
   width: 100%;
   height: 150px;
   border: 3px dotted var(--mainColor);
@@ -144,7 +145,7 @@
   align-items: center;
 }
 
-.projects-display-card-body-video {
+.web-projects-display-card-body-video {
   width: 100%;
   height: 100%;
   object-fit: contain;
@@ -153,7 +154,7 @@
 
 /* -------------------- Handle FullScreen  ---------------*/
 
-.projects-full-screen-img-open {
+.web-projects-full-screen-img-open {
   width: 100vw;
   height: 100vh;
   top: 0;
@@ -163,31 +164,31 @@
   object-fit: contain;
 }
 
-.projects-full-screen-img-close {
+.web-projects-full-screen-img-close {
   width: 100%;
   height: 100%;
   object-fit: contain;
   border-radius: 12px;
 }
 
-.projects-full-screen-img-open:hover {
+.web-projects-full-screen-img-open:hover {
   cursor: pointer;
 }
 
-.projects-full-screen-close-button {
+.web-projects-full-screen-close-button {
   z-index: 600;
   top: 0;
   right: 0;
   position: fixed;
 }
 
-.projects-full-screen-close-button button {
+.web-projects-full-screen-close-button button {
   padding: 10px;
   min-width: 0;
   font-size: 30px;
 }
 
-.projects-full-screen-bg {
+.web-projects-full-screen-bg {
   width: 100vw;
   height: 100vh;
   top: 0;
@@ -200,73 +201,73 @@
 /* ------------------------------------------------------ Tablet media query -----------------------------------------------------------------------*/
 
 @media (min-width: 601px) {
-  .projects-root {
+  .web-projects-root {
     width: 70%;
   }
 
-  .projects-content {
+  .web-projects-content {
     margin-top: 15%;
     margin-bottom: 15%;
   }
 
-  .projects-content img {
-    height: 400px;
+  .web-projects-main-asset {
+    width: 400px;
   }
 
-  .projects-copy {
+  .web-projects-copy {
     padding-top: 15%;
     gap: 30px;
   }
 
-  .projects-copy h2 {
+  .web-projects-copy h2 {
     font-size: 40px;
   }
-  .projects-copy p {
+  .web-projects-copy p {
     font-size: 16px;
   }
 
-  .projects-CTA {
+  .web-projects-CTA {
     gap: 20px;
     margin-top: 10%;
   }
 
-  .projects-display-projects-cards {
+  .web-projects-display-web-projects-cards {
     margin-bottom: 15%;
     gap: 15px;
   }
 
-  .projects-display-projects-cards hr {
+  .web-projects-display-web-projects-cards hr {
     margin: 30px auto;
   }
 
-  .projects-display-card-body {
+  .web-projects-display-card-body {
     padding: 40px;
     gap: 25px;
   }
 
-  .projects-display-card-body h2 {
+  .web-projects-display-card-body h2 {
     font-size: 32px;
     padding: 20px 0;
   }
 
-  .projects-display-card-body i {
+  .web-projects-display-card-body i {
     font-size: 12px;
   }
 
-  .projects-display-card-body h4 {
+  .web-projects-display-card-body h4 {
     font-size: 24px;
   }
 
-  .projects-display-card-body p {
+  .web-projects-display-card-body p {
     font-size: 16px;
   }
 
-  .projects-display-card-body ul {
+  .web-projects-display-card-body ul {
     padding-left: 50px;
     font-size: 16px;
   }
 
-  .projects-display-card-body li {
+  .web-projects-display-card-body li {
     width: 100%;
     height: min-content;
     text-align: left;
@@ -274,7 +275,7 @@
     box-sizing: border-box;
   }
 
-  .projects-display-card-body li > img {
+  .web-projects-display-card-body li > img {
     height: 16px;
     object-fit: contain;
     position: absolute;
@@ -282,28 +283,28 @@
     transform: translateY(-50%);
   }
 
-  .projects-display-card-CTA {
+  .web-projects-display-card-CTA {
     margin: 15px auto;
     gap: 15px;
     flex-direction: row;
   }
 
-  .projects-card-asset-loader {
+  .web-projects-card-asset-loader {
     height: 300px;
     border: 5px dotted var(--mainColor);
   }
 
-  .projects-display-card-body-video {
+  .web-projects-display-card-body-video {
     border-radius: 16px;
   }
 
   /* -------------------- Handle FullScreen  ---------------*/
 
-  .projects-full-screen-img-close {
+  .web-projects-full-screen-img-close {
     border-radius: 16px;
   }
 
-  .projects-full-screen-close-button button {
+  .web-projects-full-screen-close-button button {
     padding: 20px;
     min-width: 0;
     font-size: 40px;
@@ -313,13 +314,13 @@
 /* --------------------------------------------------------------------- Desktop media query -----------------------------------------------------------------------*/
 
 @media (min-width: 1181px) {
-  .projects-root {
+  .web-projects-root {
     width: 80%;
     height: min-content;
     margin: 0 auto;
   }
 
-  .projects-content {
+  .web-projects-content {
     height: 100%;
     width: 100%;
     margin-top: 10%;
@@ -330,19 +331,12 @@
     justify-content: space-between;
   }
 
-  .projects-content img {
-    height: 100%;
-    width: 40%;
-    object-fit: contain;
-    animation: scale-opacity-in 0.7s cubic-bezier(0.5, 0.27, 0.45, 0.87);
-    transition: all 0.4s cubic-bezier(0.5, 0.27, 0.45, 0.87);
+  .web-projects-main-asset {
+    width: 450px;
+    margin: 0;
   }
 
-  .projects-content img:hover {
-    transform: rotate(10deg) scale(1.1);
-  }
-
-  .projects-copy {
+  .web-projects-copy {
     width: 55%;
     padding-top: 0%;
     gap: 30px;
@@ -351,20 +345,20 @@
     flex-direction: column;
   }
 
-  .projects-copy h2 {
+  .web-projects-copy h2 {
     font-size: 46px;
     text-align: left;
     font-weight: 700;
     animation: opacity-translation-Y-in 0.7s cubic-bezier(0.48, 0.23, 0.61, 0.93);
   }
-  .projects-copy p {
+  .web-projects-copy p {
     font-size: 20px;
     font-weight: normal;
     text-align: justify;
     animation: opacity-translation-Y-in 0.8s cubic-bezier(0.48, 0.23, 0.61, 0.93);
   }
 
-  .projects-CTA {
+  .web-projects-CTA {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -376,7 +370,7 @@
     animation-fill-mode: backwards;
   }
 
-  .projects-display-projects-cards {
+  .web-projects-display-web-projects-cards {
     display: flex;
     flex-direction: column;
     margin: 0 auto;
@@ -384,13 +378,13 @@
     margin-bottom: 10%;
   }
 
-  .projects-display-projects-cards hr {
+  .web-projects-display-web-projects-cards hr {
     width: 90%;
     border-radius: 100%;
     margin: 20px auto;
   }
 
-  .projects-display-card-body {
+  .web-projects-display-card-body {
     width: 100%;
     padding: 40px;
     gap: 30px;
@@ -400,7 +394,7 @@
     flex-direction: column;
   }
 
-  .projects-display-card-body h2 {
+  .web-projects-display-card-body h2 {
     font-size: 46px;
     text-align: center;
     font-weight: 700;
@@ -409,31 +403,31 @@
     text-decoration: underline;
   }
 
-  .projects-display-card-body i {
+  .web-projects-display-card-body i {
     font-size: 14px;
   }
 
-  .projects-display-card-body h4 {
+  .web-projects-display-card-body h4 {
     font-size: 28px;
     text-align: left;
     font-weight: 700;
     width: 100%;
   }
 
-  .projects-display-card-body p {
+  .web-projects-display-card-body p {
     text-align: justify;
     font-size: 16px;
     width: 100%;
   }
 
-  .projects-display-card-body ul {
+  .web-projects-display-card-body ul {
     text-align: left;
     width: 100%;
     padding-left: 50px;
     box-sizing: border-box;
   }
 
-  .projects-display-card-body li {
+  .web-projects-display-card-body li {
     width: 100%;
     height: min-content;
     text-align: left;
@@ -441,7 +435,7 @@
     box-sizing: border-box;
   }
 
-  .projects-display-card-body li > img {
+  .web-projects-display-card-body li > img {
     height: 16px;
     object-fit: contain;
     position: absolute;
@@ -449,7 +443,7 @@
     transform: translateY(-50%);
   }
 
-  .projects-display-card-CTA {
+  .web-projects-display-card-CTA {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -457,7 +451,7 @@
     gap: 20px;
   }
 
-  .projects-card-asset-loader {
+  .web-projects-card-asset-loader {
     width: 100%;
     height: 450px;
     border: 3px dotted var(--mainColor);
@@ -467,17 +461,17 @@
     align-items: center;
   }
 
-  .projects-display-card-body-video {
+  .web-projects-display-card-body-video {
     border-radius: 18px;
   }
 
   /* -------------------- handle FullScreen open ---------------*/
 
-  .projects-full-screen-img-close {
+  .web-projects-full-screen-img-close {
     border-radius: 18px;
   }
 
-  .projects-full-screen-close-button button {
+  .web-projects-full-screen-close-button button {
     padding: 20px;
     min-width: 0;
     font-size: 40px;
