--- a/src/routes/motionProjects/_motionProjects.css
+++ b/src/routes/motionProjects/_motionProjects.css
@@ -12,15 +12,16 @@
   flex-direction: column;
 }
 
-.motion-projects-content img {
-  height: 250px;
+.motino-projects-main-asset {
+  width: 250px;
+  margin: 0 auto;
   object-fit: contain;
   animation: scale-opacity-in 0.7s cubic-bezier(0.5, 0.27, 0.45, 0.87);
-  transition: all 0.4s cubic-bezier(0.5, 0.27, 0.45, 0.87);
+  transition: all 0.2s cubic-bezier(0.5, 0.27, 0.45, 0.87);
 }
 
-.motion-projects-content img:hover {
-  transform: rotate(10deg) scale(1.1);
+.motino-projects-main-asset:hover {
+  transform: scale(1.05);
 }
 
 .motion-projects-copy {
@@ -209,8 +210,8 @@
     margin-bottom: 15%;
   }
 
-  .motion-projects-content img {
-    height: 400px;
+  .motino-projects-main-asset {
+    width: 400px;
   }
 
   .motion-projects-copy {
@@ -330,16 +331,9 @@
     justify-content: space-between;
   }
 
-  .motion-projects-content img {
-    height: 100%;
-    width: 40%;
-    object-fit: contain;
-    animation: scale-opacity-in 0.7s cubic-bezier(0.5, 0.27, 0.45, 0.87);
-    transition: all 0.4s cubic-bezier(0.5, 0.27, 0.45, 0.87);
-  }
-
-  .motion-projects-content img:hover {
-    transform: rotate(10deg) scale(1.1);
+  .motino-projects-main-asset {
+    width: 450px;
+    margin: 0;
   }
 
   .motion-projects-copy {
