--- a/src/components/DemoCard/_demoCard.css
+++ b/src/components/DemoCard/_demoCard.css
@@ -27,7 +27,7 @@
   transition: all 0.2s ease-in-out;
 }
 
-.card-root-close:hover {
+/* .card-root-close:hover {
   scale: 1.01;
   opacity: 0.95;
   cursor: pointer;
@@ -39,7 +39,7 @@
   opacity: 0.95;
   cursor: pointer;
   box-shadow: 0px 0px 5px 0px var(--mainColor);
-}
+} */
 
 .card-headline {
   width: 100%;
